--- a/BenchmarkApp/Client/wwwroot/index.html
+++ b/BenchmarkApp/Client/wwwroot/index.html
@@ -11,6 +11,7 @@
     <link href="BenchmarkApp.Client.styles.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
+    <link href="wwwroot/css/app.css?v=1" rel="stylesheet" />
 </head>
 
 <body>
